# MinimalCompressor

./: .gitignore  Cargo.toml  README.md
src/: compression.rs  dialog.rs  file_entry.rs  main.rs  quality.rs  utils.rs
