[package]
name = "MinimalCompressor"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
lucide-icons = {version = "0.575.0", features = ["iced"]}
rfd = "0.17.1"
tokio = { version = "1", features = ["rt", "macros", "time", "process"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
